--- a/views/lexicon/tabs/datagrid.html.twig
+++ b/views/lexicon/tabs/datagrid.html.twig
@@ -235,7 +235,7 @@
                 <tfoot>
                     <tr>
                         <td class="table__form" colspan="4">
-                        <button type="button" class="close" data-dismiss="table-form" aria-hidden="true">&times;</button>
+                        <button type="button" class="close" data-dismiss="table-form" aria-hidden="true">×</button>
                             {{
                                 form.fieldset_start({'legend': 'New choice'})
                             }}
