Stop multiple appended buttons from overlapping
Closes #806

--- a/views/lexicon/forms/text.html.twig
+++ b/views/lexicon/forms/text.html.twig
@@ -466,6 +466,15 @@
         })
     }}
 
+    {{
+        form.text({
+            'id': 'text-32',
+            'label': 'Appended button',
+            'append_type': 'button',
+            'append': html.button({ 'label': 'Button' })
+        })
+    }}
+
     {{ form.fieldset_end() }}
 
     {{
