--- a/stylesheets/_component.modals.scss
+++ b/stylesheets/_component.modals.scss
@@ -107,8 +107,9 @@
 
 // Title text within header
 .modal__title {
-    margin: 0;
+    font-size: 16px;
     line-height: $modal-title-line-height;
+    margin: 0;
 }
 
 // Modal body
