--- a/stylesheets/_component.modals.scss
+++ b/stylesheets/_component.modals.scss
@@ -107,6 +107,7 @@
 
 // Title text within header
 .modal__title {
+    border: 0;
     font-size: 16px;
     line-height: $modal-title-line-height;
     margin: 0;
