--- a/stylesheets/_component.modals.scss
+++ b/stylesheets/_component.modals.scss
@@ -110,6 +110,10 @@
     font-size: 16px;
     line-height: $modal-title-line-height;
     margin: 0;
+
+    h1 {
+        border: 0;
+    }
 }
 
 // Modal body
