--- a/stylesheets/_component.select2.scss
+++ b/stylesheets/_component.select2.scss
@@ -712,6 +712,7 @@ span.select2-selection.select2-selection--single {
     line-height: 34px;
 }
 
+.select2-container--default.select2-container--open .select2-selection--single,
 .select2-container--default.select2-container--focus .select2-selection--single,
 .select2-container--default.select2-container--focus:focus .select2-selection--single {
     border: 1px solid color(primary);
