--- a/stylesheets/_utility.states.scss
+++ b/stylesheets/_utility.states.scss
@@ -32,6 +32,15 @@ $danger-to-text-color: black;
     }
 }
 
+.has-error:not(.form__group),
+.has-danger:not(.form__group) {
+    background-color: lighten(color(danger), 20) !important;
+
+    &:hover {
+        background-color: lighten(color(danger), 17) !important;
+    }
+}
+
 @each $state, $state-color, $state-color-alt in $state-colors {
     %text--#{$state},
     .text--#{$state} {
