--- a/stylesheets/_utility.utilities.scss
+++ b/stylesheets/_utility.utilities.scss
@@ -333,3 +333,8 @@ div.no-results {
 .u-margin-bottom-none {
     margin-bottom: 0 !important;
 }
+
+%u-margin-bottom-1,
+.u-margin-bottom-1 {
+    margin-bottom: 1rem !important;
+}
