Change notifications-toggle to use <button> rather than <a>
The element doesn’t trigger navigation to a location so `<button>` is the more appropriate element to use.

Fixes a11y issue:

> Web Content Accessibility Guidelines (WCAG) 2.0, Level A: 4.1.2 Name, Role, Value
>
> This link's `href` attribute is not properly constructed.

--- a/views/lexicon/includes/notifications.html.twig
+++ b/views/lexicon/includes/notifications.html.twig
@@ -1,8 +1,7 @@
     <div class="dropdown notifications">
         {{
-            html.link({
-                'class': 'notifications-toggle is-active',
-                'href': '#',
+            html.button({
+                'class': 'notifications-toggle btn--naked is-active',
                 'label': html.icon('bell-o', { 'label': 'Show notifications' }),
                 'data-toggle': 'dropdown'
             })
