--- a/views/lexicon/tabs/message.html.twig
+++ b/views/lexicon/tabs/message.html.twig
@@ -11,7 +11,7 @@
         <li><strong>This is bold text</strong></li>
         <li><i>This is italic text</i></li>
         <li><strong><i>This is bold, italic text</i></strong></li>
-        <li><a href="#" title="This is a link">This is a link</a></li>
+        <li><a href="#" title="This is a link title">This is a link</a></li>
         <li><abbr title="This is the description">This is an abbreviation</abbr></li>
         <li><a href="#" title="This is the link description">This is a link with an <abbr title="This is the abbreviation description">abbr</abbr> inside it</a></li>
     </ul>
