--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -2232,7 +2232,7 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
     {% import _self as form %}
     {% import '@pulsar/pulsar/v2/helpers/elem.html.twig' as elem %}
 
-    {% set toggleLabel = '<span class="hide">' ~ options.label ~ '</span>' %}
+    {% set toggleLabel = '<span class="hide">toggle ' ~ options.label ~ '</span>' %}
 
     {% if options.help is defined and options.help is not empty %}
         {% set options = options|merge({ 'help_id': 'guid-' ~ random() }) %}
